[fix] remove "border: collapse"
On IE, table border disappear unnaturally if there is this style.

--- a/app/assets/stylesheets/ss/_pc_mb.scss
+++ b/app/assets/stylesheets/ss/_pc_mb.scss
@@ -64,7 +64,6 @@ ul li {
   list-style: none;
 }
 table {
-  border-collapse: collapse;
   border-spacing: 0;
   empty-cells: show;
 }
